# $Id$

2006-12-17	Konstantin V. Arkhipov

	* core/Base/Enumeration.class.php: synced with php version.

	* core/Form/Primitives/PrimitiveDumper.class.php: removed.

	* core/DB/: asyncQuery()/isBusy() dropped; queueSuppored and
	supportSequences() renamed to hasQueue() and hasSequences().

	* core/Criteria/Criteria.class.php: limit/offset support added.

2006-12-11	Konstantin V. Arkhipov

	* meta/: lazy one-to-one relation implemented.

2006-12-05	Konstantin V. Arkhipov

	* core/Form/Primitives/PrimitiveFile.class.php: copyToPath() added.

	* main/Flow/MonolithicController.class.php: hooks-based editor
	implemented.

	* core/Form/Primitives/: Timestamp' stuff separated from
	PrimitiveDate; this one breaks BC: you must replace all
	Primitive::date() calls to Primitive::timestamp().

2006-12-04	Konstantin V. Arkhipov

	* main/DAOs/ObjectQuery.class.php: ressurected in deprecated form.

2006-12-03	Konstantin V. Arkhipov

	* core/Criteria/: long awaited ObjectQuery's AI-alternative
	introduced.

	* core/OSQL/: join's support extracted from SelectQuery, so now
	UpdateQuery can handle joins too.

2006-12-02	Konstantin V. Arkhipov

	* core/Base/Date.class.php: extracted from Timestamp.

	* meta/types/DateType.class.php: Timestamp-based pseudo Date type.

2006-12-01	Konstantin V. Arkhipov

	* main/SPL/bundled/: Serializable interface added.

2006-11-30	Konstantin V. Arkhipov

	* core/Base/Enumeration.class.php: only 'id' and 'name' are stored
	upon serialization by default.

2006-11-25	Igor V. Gulyaev

	* meta/builders/BaseBuilder.class.php: do not generate getTable,
	getObjectName, getSequence for abstract DAO's.

2006-11-15	Konstantin V. Arkhipov

	* doc/project.skel/: moved to new layout, invented by Antony.

2006-11-10	Konstantin V. Arkhipov

	* meta/: return type-hints are now generated for every class.

2006-11-09	Konstantin V. Arkhipov

	* main/Utils/RussianTextUtils.class.php: dropped unused getAsText().
