@@ -31,7 +31,10 @@ if test "$PHP_ONPHP" != "no"; then
 		src/core/OSQL/SQLTableName.c \
 		src/core/OSQL/Query.c \
 		src/core/OSQL/QueryIdentification.c \
+		src/main/DAOs/DAOConnected.c \
+		src/main/DAOs/FullTextDAO.c \
 		src/main/DAOs/Handlers/SegmentHandler.c \
+		src/main/Flow/ViewResolver.c \
 	"
 	ONPHP_INCLUDES="\
 		-I@ext_srcdir@/src \
